--- a/HTML/aula1/css/css/custom.css
+++ b/HTML/aula1/css/css/custom.css
@@ -32,7 +32,7 @@ body {
 }
 
 .reveal code {
-  padding: 30px !important; 
+  padding: 30px !important;
   line-height: 35px !important;
   overflow: hidden !important;
 }
@@ -43,5 +43,9 @@ body {
 }
 
 .reveal .text-center {
-  text-align: center; 
+  text-align: center;
+}
+
+.reveal .mb-0 {
+  margin-bottom: 0;
 }
